# kvs-rust

./: .gitignore  Cargo.toml  README.md
src/: client.rs  common.rs  error.rs  lib.rs  server.rs
src/engines/: kvs.rs  mod.rs  sled.rs
src/resp/: de.rs  error.rs  mod.rs  ser.rs
src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared.rs
tests/: cli.rs  kv_store.rs
