debug = true

[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
author = "Shubha be.shubh42@gmail.com"
authors =  ["Shubh be.shubh42@gmail.com"]
description = "A key value store"

[dependencies]
anyhow = { version="1.0.93", features = ["backtrace"]}
bson = "2.0"
clap = { version = "4.5.20", features = ["derive"] }
failure = { version = "0.1.8", features = ["derive"]}
serde = { version = "1.0", features=["derive"]}
serde_json = "1.0"
buffered_offset_reader = "0.6.0"
tempfile = "3.0.7"
log = "0.4.22"
env_logger = "0.11.5"
dotenv = "0.15"
nom = "7"
rayon = "1.10.0"
crossbeam = "0.8.2"
dashmap="6.1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
rand = "0.6.5"
criterion = "0.3"
crossbeam-utils = "0.8.5"
panic-control = "0.1.4"
